# LinearDrive

./: .gitignore  CMakeLists.txt  README.md
assets/: ASSET_SOURCES.md
assets/models/: creature_stalker.glb  creature_stalker.mtl
docs/: TUTORIAL.md
src/: main.cpp
src/engine/: Assets.cpp  Assets.hpp  AudioSystem.cpp  AudioSystem.hpp  CockpitRig.hpp  Engine.cpp  Engine.hpp  Renderer.cpp  Renderer.hpp
src/game/: Input.hpp  Simulation.cpp  Simulation.hpp  SmokeTest.cpp  SmokeTest.hpp  WorldGenerator.cpp  WorldGenerator.hpp
tools/: build_installer.ps1  fetch_assets.ps1  generate_creature_asset.py
tools/installer/: LinearDriveInstaller.cpp
